--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-/* @import "@clerk/themes/shadcn.css"; */
+@import "@clerk/themes/shadcn.css";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --color-background-service: var(--background-service);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -48,6 +49,7 @@
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
+  --background-service: oklch(0.9851 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -83,6 +85,7 @@
 
 .dark {
   --background: oklch(0.145 0 0);
+  --background-service: oklch(0.14 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
